# COREWAR

./: CMakeLists.txt  Makefile  check.c  corewar  corewar.h  corewar_loop.c  file_get_content.c  game.c  init.c  insert_params.c  inst_1-4.c  inst_12-16.c  inst_5-8.c  inst_9-12.c  is_valid.c  main.c  memory.c  op.h  player.c  print_memory.c  render.c  render_inst.c  sin_prediction.ipynb  util.c  wine_prediction1.ipynb
asm/src/: init.c
vm_champs/champs/examples/: govno.cor  govno.s
